2006-06-16  Sven Neumann  <sven@gimp.org>

	* app/actions/debug-actions.c: no need to be extra concise here.

2006-06-16  Sven Neumann  <sven@gimp.org>

	* app/actions/image-commands.c (image_convert_cmd_callback):
	always call gimp_image_flush() so that the image mode radio
	buttons reflect the image state.  Attach the indexed conversion
	dialog to the shell to avoid multiple instances.

2006-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mapcolor.c (query): marked blurb for translation.

2006-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/colormap-remap.c: renamed to "Rearrange Colormap".

2006-06-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/rcm/rcm.c
	* plug-ins/rcm/rcm_dialog.c: renamed to "Rotate Colors"; it
	doesn't actually work on indexed images at all.

2006-06-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl

	* plug-ins/common/colormap-remap.c: added new plug-in for colormap
	manipulation written by Mukund Sivaraman.

2006-06-15  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c (gimp_image_convert): remove
	duplicate colors for all palette types (except for MAKE_PALETTE
	since there shouldn't be any unused colors then).  That's what
	the PDB documentation claims the function would be doing.

	* app/dialogs/convert-dialog.c: allow use of the "Remove unused
	colors" toggle for all but the optimized palette.

2006-06-15  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c (image_actions_update): improved
	code to set the image mode radio actions; set their sensitivity
	also.

	* app/actions/image-commands.c (image_configure_grid_cmd_callback):
	fixed cast to silence compiler warning.

2006-06-15  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdockbook.c (gimp_dockbook_get_tab_widget): set
	the event box' window invisible so we get the right background
	with all themes.

2006-06-14  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
