@@ -1,5 +1,10 @@
 2006-06-16  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimplist.c (gimp_list_new, gimp_list_new_weak): for
+	debugging purposes, set the children type as the name of the list.
+
+2006-06-16  Sven Neumann  <sven@gimp.org>
+
 	* app/actions/debug-actions.c: no need to be extra concise here.
 
 2006-06-16  Sven Neumann  <sven@gimp.org>
